--- a/css/style.css
+++ b/css/style.css
@@ -62,5 +62,11 @@ span {
      background-color: rgb(114, 181, 212);
  }
      
+ .fifth-span {
+     background-color: brown;
+ }
 
+ .sixth-span {
+     background-color: darkturquoise;
+ }
  
